--- a/index.html
+++ b/index.html
@@ -98,53 +98,13 @@
 
     <!--------- Bills Table Section Start ------------->
     <div id="bill_table_section">
-      <!-- <h1 class="bold_blue">Reverse Charge VAT</h1>
-      <div id="table">
-        <ul id="table_left_col">
-          <li>
-            <h1>Name Left</h1>
-            <p>Leadfeeder Premium Product</p>
-          </li>
-        </ul>
-        <ul id="table_right_col">
-          <li>
-            <h1>Name Right</h1>
-            <p>0000,00</p>
-          </li>
-          <li>
-            <h1>Name Right</h1>
-            <p>0000,00</p>
-          </li>
-          <li>
-            <h1>Name Right</h1>
-            <p>0000,00</p>
-          </li>
-          <li>
-            <h1>Name Right</h1>
-            <p>0000,00</p>
-          </li>
-          <li>
-            <h1>Name Right</h1>
-            <p>0000,00</p>
-          </li>
-          <li>
-            <h1>Name Right</h1>
-            <p>0000,00</p>
-          </li>
-          <li>
-            <h1>Name Right</h1>
-            <p>0000,00</p>
-          </li>
-          <li>
-            <h1>Name Right</h1>
-            <p>0000,00</p>
-          </li>
-        </ul>
-      </div> -->
 
+      <!------- Table ------->
       <table>
+        <caption class="bold_blue">Reverse Charge VAT</caption>
+        <!-- Table Row Start -->
         <tr>
-          <th colspan="2" class="left_col">Name Left</th>
+          <th colspan="2" class="left_col border-b">Name Left</th>
           <th colspan="1">Name Right</th>
           <th colspan="1">Name Right</th>
           <th colspan="1">Name Right</th>
@@ -156,15 +116,18 @@
           <td colspan="1">0000,00</td>
           <td colspan="1">0000,00</td>
           <td colspan="1">0000,00</td>
-          <td colspan="1">0000,00</td>
+          <td colspan="1">0000\,00</td>
         </tr>
+        <tr class="spacer"></tr>
+        <!-- Table Row End -->
+
+        <!-- Table Row Start -->
         <tr>
           <th colspan="2" class="left_col"></th>
           <th colspan="1">Name Right</th>
           <th colspan="1">Name Right</th>
           <th colspan="1">Name Right</th>
           <th colspan="1">Name Right</th>
-
         </tr>
         <tr>
           <td colspan="2" class="left_col"></td>
@@ -173,6 +136,9 @@
           <td colspan="1">0000,00</td>
           <td colspan="1">0000,00</td>
         </tr>
+        <tr class="spacer"></tr>
+        <!-- Table Row Start -->
+
       </table>
 
     </div>
