--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
           <td colspan="1">0000,00</td>
           <td colspan="1">0000,00</td>
           <td colspan="1">0000,00</td>
-          <td colspan="1">0000\,00</td>
+          <td colspan="1">0000,00</td>
         </tr>
         <tr class="spacer"></tr>
         <!-- Table Row End -->
